--- a/kurento-one2many-call-multiple-viewers/static/index.html
+++ b/kurento-one2many-call-multiple-viewers/static/index.html
@@ -97,7 +97,8 @@
                 <span class="glyphicon glyphicon-user"></span> Viewer</a>
               <a id="terminate" href="#" class="btn btn-danger">
                 <span class="glyphicon glyphicon-stop"></span> Stop</a>
-              <input type="text"  id="presenterId" placeholder="1">
+              <select id="presenterId">
+              </select>
             </div>
           </div>
           <br/>
